# mead

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml  security.yml
ai/: DECISIONS.md  OPTIMIZATION_SUMMARY.md  PLAN.md  REFACTORING_PLAN.md  RESEARCH.md  SESSION_2025-11-06.md  STATUS.md  TODO.md
ai/research/: av1_encoder_settings.md  cli_ux_best_practices.md  cli_ux_design.md  encoder_comparison.md  rust_media_api_design.md
mead/: Cargo.toml
mead-core/: Cargo.toml
mead-core/src/: error.rs  frame.rs  io.rs  lib.rs
mead-core/src/codec/: aac.rs  av1.rs  mod.rs  opus.rs
mead-core/src/container/: ivf.rs  mod.rs  mp4.rs  y4m.rs
mead-core/tests/: mp4_spike.rs
mead/benches/: encode_benchmark.rs
mead/src/: main.rs  output.rs
mead/src/encoders/: mod.rs  svtav1.rs
scripts/: compare_encoders.sh
svt-av1-sys/: Cargo.toml  build.rs  wrapper.h
svt-av1-sys/src/: lib.rs
