[workspace]
resolver = "2"
members = [
    "mead-core",
    "mead",
    "svt-av1-sys",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/nijaru/mead"
homepage = "https://github.com/nijaru/mead"
description = "Memory-safe media processing toolkit"
keywords = ["video", "codec", "media", "av1", "mp4"]
categories = ["multimedia::video", "multimedia::encoding"]

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"

# Media libraries (safe)
mp4parse = "0.17"  # Keeping for comparison during migration
mp4 = "0.14"  # Primary MP4 library - supports streaming
rav1e = "0.7"
aligned-vec = "0.6"
num_cpus = "1.16"
symphonia = { version = "0.5", features = ["aac", "mp3", "wav"] }
audiopus = "0.2"
y4m = "0.8"  # YUV4MPEG2 format support

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
