[package]
name = "mead-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
mp4parse.workspace = true
mp4.workspace = true
rav1e.workspace = true
aligned-vec.workspace = true
num_cpus.workspace = true
symphonia.workspace = true
audiopus.workspace = true
y4m.workspace = true
tracing.workspace = true
