[package]
name = "mead"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
mead-core = { version = "0.0.0", path = "../mead-core" }
anyhow.workspace = true
clap.workspace = true
indicatif.workspace = true
console.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
mp4.workspace = true
audiopus.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
